Fix z-index on social buttons.

--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ body > p > a:hover {
 	position: fixed;
 	top: 10px;
 	left: 10px;
+	z-index: 2;
 }
 
 	#social iframe {
